# robotframework

./: .gitignore  .pylintrc  .snyk  LICENSE  README.md  README.rst  __init__.py  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: latest.yml  pull-request.yml  release.yml  security.yml
aws_iac_keywords/: account.py  acm.py  amplify.py  analyzer.py  autoscaling.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codeartifact.py  codecommit.py  config.py  directory.py  dynamo.py  ec2.py  ecr.py  elb.py  excel.py  iam.py  identitystore.py  keepass.py  kms.py  profile.py  rds.py  resourcegroup.py  route53.py  s3.py  sns.py  sso.py  terraform.py
aws_iac_keywords/tools/: account.py  acm.py  amplify.py  analyzer.py  autoscaling.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codeartifact.py  codecommit.py  compare.py  config.py  directory.py  dynamo.py  ec2.py  ecr.py  elb.py  iam.py  identitystore.py  kms.py  (+8 more)
keywords/: __init__.py  account.py  analyzer.py  cloudtrail.py  cloudwatch.py  codecommit.py  config.py  directory.py  dynamo.py  ec2.py  ecr.py  iam.py  keepass.py  kms.py  rds.py  resourcegroup.py  s3.py  sns.py  sso.py  terraform.py
scripts/: audit.sh  lint.sh
technogix_iac_keywords/: account.py  acm.py  amplify.py  analyzer.py  autoscaling.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codeartifact.py  codecommit.py  config.py  directory.py  dynamo.py  ec2.py  ecr.py  elb.py  excel.py  iam.py  keepass.py  kms.py  profile.py  rds.py  resourcegroup.py  route53.py  s3.py  sns.py  sso.py  terraform.py
tools/: __init__.py  directory.py  rds.py
(+27 files in other folders)
